@@ -5,15 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -44,14 +40,11 @@ global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -63,52 +56,32 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.1
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
         - "export PUPMOD_METADATA_VERSION=`ruby -r json -e \"puts JSON.parse(File.read('metadata.json')).fetch('version')\"`"
         - '[[ $TRAVIS_TAG =~ ^simp-${PUPMOD_METADATA_VERSION}$|^${PUPMOD_METADATA_VERSION}$ ]]'
-
       deploy:
         - provider: releases
           api_key:
-            secure: "AJEJJobHKq6GKYkxSOQC9Of71pdI6dDaU4px58nu38KQCftDaqAYGm3Z5ruAdGqxzibpLjf+H7HGKxfzO4D+A5Bwm2zdCk2iktvormgG9HLXmEsiLOy9uu9ZAHOutoQswU5B8yV4xUpBY4IQ/CSsNois/31ZWrUgHLFrDP801UXTLnL1NQ5C+I8sd3nkRRDEJmdEEv0EXuuyaVMKYVtfA0s8TS7rSjQWKifw0F6e7bV0INX4bgI1vv99zTGJmzUllPSpvtN6D0T0IjJ+7LzgSYgF+ET5xqa7sA+/j4z8w/P/xF7i3jsekS01WRBtMaTaDpXHWGiixkJhvAQVO6XulAKeKDDrxthWmaVdDfN9b9BSSLYfu4mwkGK5a9UK4ZuHrNtEPGN++QXU4LPY1F4v4CtDLcdNyKGa+OelbSW/XV56MtFVEJU7n5/teCZ34h0CKi5ooXUlW4xAco8Wk2bTJ0bBqT83HUzG4BciPfjGnqYuA6lbs4u67HdhIBP4AOrcIJ/jeXVecml5NjLKyGMynzuOvtMHsgMgGw+0weYXgZNSlEKc4FNBfgl7oVhgDGPJixe0h+RkmHZKTj19+xq/aLIhF2pEK6R+U7/q2r4HYtyuiwX+rcGm1wtuZBGyh8GEN0HnlMYjjkgZcGuZBeeKqXY2OYvBzldJcTO1ICmcKmQ="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -116,8 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "JdaBzYzGnNWLoRmsUl0zOqj/OzxhU/PxyQrVsjAfjTatWwky0PSPelkBsMSXB/ZKsKRa767X2xN+IY/NT+W/mLYO6TIQhU5B689JEmoxxuRF9eDd26mMJdctSsOAQwFh33VqAIwI17skrIzw/fMwW/fPY6ouAIWIWQ2GaBjMfOGGJUhipytQJ3SNPv9Mq9oliLLdtMIxoD7RtcHanOiAwY+5lr0xlD6EYeqVgNcyH+EJAiyWKUv5Ub2157FAi6WHp0ReU5Gel93+nFnQt5Jj+TZMNs3BfjFqVsBOwaH932IVpvcMxBqaS/+zya/3y/dQFe7H96qXGC40cIq2D+bAVldgTqUM02ZPSjYjBiYsf6KosousRYvUhuC8PNLzzSHHf8wF8MVCjuAkkUtvnLMJ5moNzATGauTMWx4A/fKtHZOqJK6O7Gw2zhz/YU3VY7RPWpEjmDdRUWPpEWs8YbASfGBxpJd2z0Q6W+//eqCU63ZvOGYfGijEn3m8ar4xwJ2nbY+vY3U8OHyvwIAKjXEvLzg3wkDtJTgckzO2QEtVHIMEgb4P49jFM6Lq9oReMwG/2XL0ij7+94DB+XgJdBB0uPuolXyHmqIWOR3ti4P/jJQozle5rPC+UGyUYfFwGWCztA30uLBKQ7rZq9myFmFldbSrzudhoGfE5EUZ7VtSuAU="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
-            rvm: 2.4.1
             condition: '($SKIP_FORGE_PUBLISH != true)'
